<resources>
    <string name="app_name">MessengerNow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_login">Connexion</string>
    <string name="btn_logout">Deconnexion</string>
    <string name="btn_register">Inscription</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password again</string>
    <string name="error_intro">"Svp "</string>
    <string name="error_blank_username"> entrer un username</string>
    <string name="error_blank_password"> entrer un password</string>
    <string name="error_blank_email"> entrer un email</string>
    <string name="error_password"> entrer le meme password</string>
    <string name="error_join">", et"</string>
    <string name="error_end">.</string>
    <string name="progress_signup">Inscription en cours...</string>
    <string name="progress_login">Connexion en cours...</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
